@@ -1,8 +1,6 @@
 TODO
 
-OPTION: extremely short view of alerts (no No problem, colored background behind N-icon)
 FIX: Force saving password with special chars
-FIX: No colored Error message
 NEW: Sound based on attempt (X/Y)
 
 Bigger things:
@@ -11,3 +9,8 @@ NEW: New filtering system (Regexps)
 
 My targets:
 NEW: Percentage od download
+Interval set by user
+Attempt in popup
+Sound file for unreachable
+Filter by duration
+Filter by attempt ?
