@@ -1,7 +1,9 @@
 0.10.9 (testing)
+* NEW: extremely short statusbar info (no No problem, colored background behind N-icon)
 * INTERNAL: New version of popup - tooltip and popup mashup
 * INTERNAL: Popup scrollbars are used instead of arrows, but scrollbars have to be still visible
 * BUGFIX: If there is no server active, then label Not Set is shown instead of No Problem
+* BUGFIX: No colored Error message
 * BUGFIX: Regexp on services used to remove the whole host - fixed
 * INTERNAL: Limit of number of servers increased to 200
 
